<resources>
    <string name="app_name">Track It!</string>
    <string name="msg_no_clubs">There are no projects to show right now. Refresh.</string>
    <string name="msg_no_clubs_activities">There are no project issues to show right now. Refresh.</string>
    <string name="add_activity">Add Activity</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="short_note">Short Note</string>
    <string name="long_note">Long Note</string>
    <string name="location">Location</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="msg_activity_uploaded">Activity uploaded to server successfully. Click to view.</string>
    <string name="activity_uploaded">Activity Uploaded</string>
    <string name="activity_deleted">Activity Deleted</string>
    <string name="action_add">New Activity</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="home">Home</string>
    <string name="google_api_key">AIzaSyD34PoBxALwQ4xLPYc29inTXJ1czU8h1rA</string>
    <string name="google_places_key">AIzaSyAv2tIrknnKA94WMedkdLbTVDpH0g_aRf0</string>
    <string name="action_delete">Delete Activity</string>
    <string name="action_save">Save Activity</string>
    <string name="action_project_points">Show project points</string>
    <string name="city_name">CITY College, the International Faculty of the University of Sheffield, Leontos Sofou, Thessaloniki</string>
    <string name="msg_snackbar">One Activity Deleted!</string>
    <string name="undo">UNDO</string>
    <string name="progress_message">Let\'\ s put some effort on that ;)</string>
    <string name="issue_input_comment_hint">What was your effort about?</string>
    <string name="issue_input_work_hours_hint">Hours of effort:</string>
    <string name="msg_work_log_uploaded">Work log uploaded to server successfully.</string>
    <string name="projects">Track It!&gt; Projects</string>
    <string name="issues">Issues</string>
    <string name="issue">Issue</string>
    <string name="projects_ranking">Projects Ranking</string>
    <string name="user_trophies">User Trophies</string>
    <string name="issue_points">Issue Points</string>
    <string name="assignee_points">Assignee Points</string>
    <string name="issue_time">Issues time use</string>
    <string name="first_trophy_message">Great Job! You have completed 4 sessions in a row!</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thessaloniki_city">Thessaloniki</string>
    <string name="imageTrophy">a trophy</string>
</resources>
