<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_club_activity_date"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        tools:text="16/05/2016"/>

    <EditText
        android:id="@+id/txt_club_activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_club_activity_date"
        android:hint="@string/title"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txt_club_activity_short_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_club_activity_title"
        android:layout_marginTop="10dp"
        android:hint="@string/short_note"/>

    <EditText
        android:id="@+id/txt_club_activity_long_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_club_activity_short_note"
        android:layout_marginTop="10dp"
        android:hint="@string/long_note"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/cancel"/>


    <Button
        android:id="@+id/btn_ok"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/ok"/>

</RelativeLayout>